model 1.1 predicting 4 but false

--- a/LeNet-Mnist.ipynb
+++ b/LeNet-Mnist.ipynb
@@ -189,6 +189,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "imported-tulsa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.EagerTensor"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "hindu-friday",
    "metadata": {},
@@ -610,8 +631,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "seasonal-billion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - ETA: 0s - loss: 0.0729 - accuracy: 0.97 - 1s 4ms/step - loss: 0.0733 - accuracy: 0.9775\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.07326621562242508, 0.9775000214576721]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "gorgeous-bride",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential, save_model, load_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "dense-gambling",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the model\n",
+    "save_model(model, './')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "returning-breach",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "image=Image.open(\"4.jpg\").convert('L')\n",
+    "image.save('4_grayscaled.jpg')\n",
+    "image.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "unusual-waters",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 32)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdata=np.asarray(image)\n",
+    "imdata.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "documented-fitness",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 253, ..., 255, 255, 255],\n",
+       "       ...,\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255],\n",
+       "       [255, 255, 255, ..., 255, 255, 255]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "received-ministry",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 32, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(imdata[...,np.newaxis].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "introductory-listening",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "executed-flashing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 32, 32)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml.append(imdata)\n",
+    "sample=np.array(ml)\n",
+    "sample.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "isolated-extraction",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 253, ..., 255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 253, ..., 255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 253, ..., 255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255]],\n",
+       "\n",
+       "       [[255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 253, ..., 255, 255, 255],\n",
+       "        ...,\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255],\n",
+       "        [255, 255, 255, ..., 255, 255, 255]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "deluxe-breed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model.predict(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "musical-avatar",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 5 5 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes = np.argmax(prediction, axis = 1)\n",
+    "print(classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "centered-ethernet",
    "metadata": {},
    "outputs": [],
    "source": []
